# gaming-project

./: .gitignore  .gitmodules  Action.hpp  CMakeLists.txt  Headers.hpp  ImageManager.cpp  ImageManager.hpp  Log.cpp  Log.hpp  README.md  SoundManager.cpp  SoundManager.hpp  Topforce.hpp  action.hpp  log.cpp  log.hpp  main.cpp  topforce.hpp
abstracts/: Character.cpp  Character.hpp  GameMode.cpp  GameMode.hpp  MoveableScreenObject.cpp  MoveableScreenObject.hpp  ScreenObject.cpp  ScreenObject.hpp  moveable_screen_object.cpp  moveable_screen_object.hpp  screen_object.cpp  screen_object.hpp
assets/images/tilemap/: Tilemap.json  Tilemap.tsx
assets/levels/: FiringRange.tmx  NukeTown.tmx  level1.json  level1.tmx
character/: Character.cpp  Character.hpp  HUD.cpp  HUD.hpp  Player.cpp  Player.hpp  Weapon.cpp  Weapon.hpp  character.cpp  character.hpp  weapon.cpp  weapon.hpp
docs/: Technisch verslag Themaopdracht Gaming.docx  technisch_verslag_gameloop.md  technisch_verslag_server.md
gamemodes/: FreeForAll.cpp  FreeForAll.hpp
gui/: HUD.cpp  HUD.hpp  MainMenu.cpp  MainMenu.hpp  Menu.hpp  ScoreBoard.cpp  ScoreBoard.hpp  ScoreBox.cpp  ScoreBox.hpp  TopforceWindow.cpp  TopforceWindow.hpp  main_menu.cpp  main_menu.hpp  menu.hpp  topforce_window.cpp  topforce_window.h
level/: MapGraphics.cpp  MapGraphics.hpp  SFMLOrthogonalLayer.hpp  map_graphics.cpp  map_graphics.hpp  map_loader.cpp  map_loader.hpp
networking/: Client.cpp  Client.hpp  Network_Client.hpp  Network_client.cpp  client.cpp  client.hpp  client1.cpp  client1.hpp  main.cpp  mainNetwork.cpp  server.cpp  server.hpp  server1.cpp  server1.hpp  topForceServer.cpp  topForceServer.hpp
